add UseCGroupMemoryLimitForHeap for memory management